Update M02 Programming Assignment - Loops and Conditionals.ipynb

--- a/M02 Programming Assignment - Loops and Conditionals.ipynb
+++ b/M02 Programming Assignment - Loops and Conditionals.ipynb
@@ -79,10 +79,8 @@
     "    print(\"looks like you have a cherry!\")\n",
     "elif(green & ~small):\n",
     "    print(\"looks like you have a watermelon!\")\n",
-    "elif(~green & ~small):\n",
+    "else(~green & ~small):\n",
     "    print(\"looks like you have a pumpkin!\")\n",
-    "else:\n",
-    "    print(\"looks like you don't have anything in your basket!\")"
    ]
   },
   {
