--- a/M02 Programming Assignment - Loops and Conditionals.ipynb
+++ b/M02 Programming Assignment - Loops and Conditionals.ipynb
@@ -28,7 +28,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "just right\n"
+      "too low\n"
      ]
     }
    ],
