--- a/M02 Lab/M02 Lab.ipynb
+++ b/M02 Lab/M02 Lab.ipynb
@@ -84,7 +84,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bobhas a GPA of 2.5\n"
+      "Bob has a GPA of 2.5\n"
      ]
     },
     {
@@ -100,7 +100,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Markhas a GPA of 0.0\n"
+      "Mark has a GPA of 0.0\n"
      ]
     }
    ],
@@ -115,7 +115,7 @@
     "    elif gpa >= 3.25:\n",
     "        print(name + ' has made the Honor roll! with a GPA of ' + str(gpa))\n",
     "    else:\n",
-    "        print(name + 'has a GPA of ' + str(gpa))"
+    "        print(name + ' has a GPA of ' + str(gpa))"
    ]
   },
   {
