Update M03 - OOP and functional programming.ipynb
fixed spelling error

--- a/M03 - OOP and functional programming.ipynb
+++ b/M03 - OOP and functional programming.ipynb
@@ -100,7 +100,7 @@
     "        else:\n",
     "            min += 1\n",
     "\n",
-    "    #If our min index equals are max index value, then that means we don't have the number in our list. So we return a 1\n",
+    "    #If our min index equals our max index value, then that means we don't have the number in our list. So we return a 1\n",
     "    return -1\n",
     "\n",
     "print(binarysearch(arr,n,k))\n",
