Update M04 Programming Assignment - Modules and Databases.ipynb
Added all the markdown sections

--- a/M04 Programming Assignment - Modules and Databases.ipynb
+++ b/M04 Programming Assignment - Modules and Databases.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "088a777b-2200-4880-8eec-a0b688f8f159",
+   "metadata": {},
+   "source": [
+    "Name: Justin Phillips Date: 4/10 Assignment: M04 Programming Assignment - Modules and Databases"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "1d77507b-0b80-46a9-ac42-c6b9951f8450",
